--- a/assignment.html
+++ b/assignment.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Akash V</h1>
 <nav>
-<a href="/html/">One</a> 
+<a href="black hole.jpg">One</a> 
 <a href="/css/">Two</a> 
 <a href="/js/">Three</a> 
 <a href="/jquery/">Four</a>
