--- a/assignment.html
+++ b/assignment.html
@@ -7,7 +7,7 @@
 <h1>Akash V</h1>
 <nav>
 <a href="black hole.jpg">One</a> 
-<a href="/css/">Two</a> 
+<a href="SampleVideo_1280x720_2mb.mp4">Two</a> 
 <a href="/js/">Three</a> 
 <a href="/jquery/">Four</a>
 </nav>
