--- a/assignment.html
+++ b/assignment.html
@@ -8,8 +8,8 @@
 <nav>
 <a href="black hole.jpg">One</a> 
 <a href="SampleVideo_1280x720_2mb.mp4">Two</a> 
-<a href="/js/">Three</a> 
-<a href="/jquery/">Four</a>
+<a href="abbrev.html">Three</a> 
+<a href="table2">Four</a>
 </nav>
 <h2>Favorite Foods</h2>
 <ul>
